<resources>
    <string name="app_name">DataBaseDemo</string>
    <string name="SignUP">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="auth_failed">Sign up Failed</string>
    <string name="auth_success">Sign up SUCCESSS</string>
    <string name="SignIn">Sign In</string>
    <string name="createAccount">Create Account</string>
    <string name="LoginText">Login</string>
    <string name="title_activity_upload_data">UploadData</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_class_selection">UploadData</string>
    <string name="title_activity_maps">Map</string>

    <string name="selectCourseSubject">Course Subject</string>
    <string name="selectCourseNumber">Course Number</string>
    <string name="addClassButton">Add Class</string>
    <string name="subjectSpinnerPrompt">Choose a class subject</string>
    <string name="dummyText">Dumm Text</string>
    <string name="experiment">experimenting</string>
    <string name="expButton">CRASH</string>
    <string name="upload_test">Uploading . . ..</string>
    <string name="go_to_map">Go to Map</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Title</string>
    <string name="title_notifications">Notification</string>

    <string name="hintTxtItem">Text Item</string>
    <string name="lblBtnAdd">Add</string>
    <string name="txtEmpty">Empty</string>
    <string name="lblBtnDel">Clear All</string>

    <string name="facebook_app_id">864818893681531</string>
    <string name="fb_login_protocol_scheme">fb864818893681531</string>

    <!--DropDown for Create Activity-->
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <!--EditText for Create Activity-->
    <!--<string name="button_title">Show Description Below</string>-->
    <string name="edit_hint">Enter Description</string>
    <!--<string name="text_title">Description is:</string>-->

</resources>
