<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alex.studybuddies.MainActivity"
    android:background="@drawable/login_background">


    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/bn_signup"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif"
        android:onClick="onSignUp"
        android:text="@string/SignUP"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_signIn"
        app:layout_constraintRight_toRightOf="@+id/userPassword"
        app:layout_constraintTop_toTopOf="@+id/btn_signIn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif"
        android:text="@string/password"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        app:layout_constraintRight_toRightOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/userEmail"
        app:layout_constraintRight_toRightOf="@+id/userEmail"
        app:layout_constraintTop_toTopOf="@+id/password" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toRightOf="@+id/email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email"
        app:layout_constraintVertical_bias="0.423"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:onClick="onSignIn"
        android:text="@string/SignIn"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/login_button"
        app:layout_constraintRight_toLeftOf="@+id/bn_signup"
        app:layout_constraintTop_toTopOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.615" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="28dp"
        android:layout_height="26dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintRight_toLeftOf="@+id/btn_signIn"
        android:layout_marginRight="11dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/userPassword"
        android:layout_marginEnd="11dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="132dp"
        android:fontFamily="sans-serif"
        android:text="@string/LoginText"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<<<<<<< HEAD
    <Button
        android:id="@+id/classesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="GoToClasses"
        android:text="Classes"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        android:layout_marginRight="33dp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onCrash"
        android:text="@string/expButton"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintLeft_toLeftOf="@+id/button2"
        app:layout_constraintRight_toRightOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create"
        android:onClick="goToCreate"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        android:layout_marginLeft="33dp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        android:layout_marginBottom="0dp" />
=======
>>>>>>> origin/master

</android.support.constraint.ConstraintLayout>
