<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alex.studybuddies.SignUpActivity"

    >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/signup_background"
        tools:layout_editor_absoluteY="77dp"
        android:layout_marginLeft="-13dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/transparent_white"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintBottom_toBottomOf="@id/bn_signup"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/bn_signup"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="321dp"
        android:layout_marginTop="-130dp"
        android:fontFamily="sans-serif"
        android:onClick="onSignUp"
        android:text="@string/SignUP"
        android:textColorLink="@drawable/com_facebook_button_background"
        android:visibility="visible"
        app:layout_constraintRight_toRightOf="@+id/userPassword"
        app:layout_constraintTop_toBottomOf="@+id/userPassword" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/userEmail"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.277" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/userEmail"
        app:layout_constraintRight_toRightOf="@+id/userEmail"
        app:layout_constraintTop_toTopOf="@+id/password" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toRightOf="@+id/email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email"
        app:layout_constraintVertical_bias="0.423" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.385" />




</android.support.constraint.ConstraintLayout>
